# webapi

./: .env  Cargo.toml  README.en.md  README.md  dev.sh
.cargo/: config.toml
src/: main.rs  serializer.rs  settings.rs
src/apis/: account.rs  chathub.rs  mod.rs  upload.rs  ws.rs
src/auth/: mod.rs  secret.rs
src/controllers/: account.rs  chathub.rs  home.rs  mod.rs  result.rs  upload.rs
src/entities/: mod.rs  prelude.rs  sys_account.rs
src/middlewares/: logger.rs
src/models/: api_result.rs  appstate.rs  mod.rs
src/repositories/: account.rs
src/services/: account.rs
templates/: upload.html
