[package]
name = "webapi"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.37"
dotenvy = "0.15.7"
http-body-util = "0.1.1"
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
once_cell = "1.19.0"
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
