
[package]
name = "webapi"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart", "ws", "http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
futures-util = "0.3.30"
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
once_cell = "1.19.0"
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.9.1", features = ["v4"] }


[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
